@@ -20,6 +20,7 @@ README
 SIGNATURE
 t/data/cnb000000168-correct_field_020a_isbn_not_present.xml
 t/data/cnb000295209-incorrect_field_008_syntax_space.xml
+t/data/cnb000545093-cnb001214971-duplicite_035a.xml
 t/data/cnb001410157-incorrect_field_020a_isbn_with_extra_characters.xml
 t/data/cnb001873805-incorrect_field_008_content-blank.xml
 t/data/cnb001880327-incorrect_260c.xml
@@ -41,6 +42,11 @@ t/MARC-Validator-Plugin-Field020/02-version.t
 t/MARC-Validator-Plugin-Field020/03-new.t
 t/MARC-Validator-Plugin-Field020/04-name.t
 t/MARC-Validator-Plugin-Field020/05-struct.t
+t/MARC-Validator-Plugin-Field035/01-use.t
+t/MARC-Validator-Plugin-Field035/02-version.t
+t/MARC-Validator-Plugin-Field035/03-new.t
+t/MARC-Validator-Plugin-Field035/04-name.t
+t/MARC-Validator-Plugin-Field035/05-struct.t
 t/MARC-Validator-Plugin-Field040/01-use.t
 t/MARC-Validator-Plugin-Field040/02-version.t
 t/MARC-Validator-Plugin-Field040/03-new.t
@@ -64,6 +70,7 @@ Validator.pm
 Validator/Abstract.pm
 Validator/Plugin/Field008.pm
 Validator/Plugin/Field020.pm
+Validator/Plugin/Field035.pm
 Validator/Plugin/Field040.pm
 Validator/Plugin/Field260.pm
 Validator/Plugin/Field264.pm
@@ -74,6 +81,8 @@ xt/MARC-Validator-Plugin-Field008/01-pod_coverage.t
 xt/MARC-Validator-Plugin-Field008/02-pod.t
 xt/MARC-Validator-Plugin-Field020/01-pod_coverage.t
 xt/MARC-Validator-Plugin-Field020/02-pod.t
+xt/MARC-Validator-Plugin-Field035/01-pod_coverage.t
+xt/MARC-Validator-Plugin-Field035/02-pod.t
 xt/MARC-Validator-Plugin-Field040/01-pod_coverage.t
 xt/MARC-Validator-Plugin-Field040/02-pod.t
 xt/MARC-Validator-Plugin-Field260/01-pod_coverage.t
