@@ -1,5 +1,6 @@
 0.07
  - Add ACKNOWLEDGEMENTS section to doc.
+ - Add plugin for 035 field to check unique 035a.
  - Fix ERRORS section in Abstract class doc.
  - Regen example in doc.
 
